# aragil

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
models/cad_model/: Mevius.SLDASM
models/cad_model/base_frame/: Base-Cover.SLDPRT  Long-Rib.SLDPRT  SLED.SLDPRT  Short-Rib.SLDPRT  Wall-1.SLDPRT  Wall-2.SLDPRT  Wall-3.SLDPRT
models/cad_model/calf/: Calf-Base-Cover.SLDPRT  Calf-Base-Cover_Right.SLDPRT  Calf-Base.SLDPRT  Calf-Base_Right.SLDPRT  Calf-Foot.SLDPRT  Calf-Link.SLDPRT  Calf-Rod.SLDPRT
models/cad_model/drives/: AK70-10.SLDASM  AK70-10_back.SLDPRT  AK70-10_front.SLDPRT  GIM8108-8.SLDASM  GIM8108-8_back.SLDPRT  GIM8108-8_front.SLDPRT
models/cad_model/hip/: Hip-Limit.SLDPRT  Hip-Link.SLDPRT
models/cad_model/other_details/: back_reference.SLDPRT
models/cad_model/thigh/: Thigh-Base.SLDPRT  Thigh-Base_Right.SLDPRT  Thigh-Cover.SLDPRT  Thigh-Cover_Right.SLDPRT  Thigh-Limit.SLDPRT  Thigh-Link.SLDPRT  Thigh-Link_Right.SLDPRT
