<package format="2">
  <name>aragil</name>
  <version>1.0.0</version>
  <description>
    <p>ARAGIL PACKAGE</p>
  </description>
  <author>Kartsev Evgeniy</author>
  <maintainer email="ewegexa@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
